syntax = "proto3";
option java_package = "de.fhg.aisec.ids.idscp2.messages";
option java_outer_classname = "IDSCP2";

//IDSCP message frame
message IdscpMessage {
  // One of the following will be filled in.
  oneof message {
    IdscpHello idscpHello = 1;
    IdscpClose idscpClose = 2;
    IdscpDatExpired idscpDatExpired = 3;
    IdscpDat idscpDat = 4;
    IdscpReRa idscpReRa = 5;
    IdscpRaProver idscpRaProver = 6;
    IdscpRaVerifier idscpRaVerifier = 7;
    IdscpData idscpData = 8;
    IdscpAck idscpAck = 9;
  }
}

// IDSCP messages

message IdscpHello {
  // IDSCP protocol version
  int32 version = 1;
  // Initial dynamic attribute token (DAT)
  IdscpDat dynamicAttributeToken = 2;
  // Set of supported remote attestation (RA) methods (prover role)
  repeated string supportedRaSuite = 3;
  // Set of accepted RA methods (verifier role)
  repeated string expectedRaSuite = 4;
}

message IdscpClose {

  enum CloseCause {
    USER_SHUTDOWN = 0;
    TIMEOUT = 1;
    ERROR = 2;
    NO_VALID_DAT = 3;
    NO_RA_MECHANISM_MATCH_PROVER = 4;
    NO_RA_MECHANISM_MATCH_VERIFIER = 5;
    RA_PROVER_FAILED = 6;
    RA_VERIFIER_FAILED = 7;
  }

  CloseCause cause_code = 1;
  string cause_msg = 2;
}

// For requesting new DAT
message IdscpDatExpired {
}

message IdscpDat {
  bytes token = 1;
}

// For requesting new RA
message IdscpReRa {
  string cause = 1;
}

message IdscpRaProver {
  bytes data = 1;
}

message IdscpRaVerifier {
  bytes data = 1;
}

message IdscpData {
  // Payload
  bytes data = 1;
  bool alternatingBit = 2;
}

message IdscpAck {
  bool alternatingBit = 1;
}